# Soul

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  compile_commands.json  main.c
Soul/: CMakeLists.txt
Soul/Sources/: main.cpp
SoulLib/: CMakeLists.txt
SoulLib/Sources/: Soul.h
SoulLib/Sources/AST/: AST.cpp  AST.h  ASTFwd.h
SoulLib/Sources/AST/Visitors/: Compare.cpp  Compare.h  Copy.cpp  Copy.h  DefaultTraverse.cpp  DefaultTraverse.h  Desugar.cpp  Desugar.h  ErrorCollector.cpp  ErrorCollector.h  Lower.cpp  Lower.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Stringify.cpp  Stringify.h  Stringify.inl  TypeDiscoverer.cpp  TypeDiscoverer.h  TypeResolver.cpp  TypeResolver.h  TypeResolver.inl  Visitor.h
SoulLib/Sources/Common/: CompileTimeDictionary.h  SourceOffset.cpp  SourceOffset.h  Value.cpp  Value.h  Value.inl
SoulLib/Sources/Core/: Diagnostic.cpp  Diagnostic.h  Optional.h  StringSwitch.h  StringView.h  Types.h
SoulLib/Sources/IR/: BasicBlock.h  BasicBlock.inl  Builder.h  Builder.inl  IR.h  IR.inl  Instruction.h  Instruction.inl  InstructionFwd.h
SoulLib/Sources/IR/Visitors/: Print.cpp  Print.h
SoulLib/Sources/IR/visitors/: Print.cpp
SoulLib/Sources/Lexer/: Codepoint.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h
SoulLib/Sources/Parser/: Parser.cpp  Parser.h  TypeSpecifier.cpp  TypeSpecifier.h
SoulLib/Sources/Types/: Overloads.cpp  Overloads.h  Type.cpp  Type.h  TypeFwd.h  TypeOverloads.cpp  TypeOverloads.h
SoulLib/Tests/UT/: CMakeLists.txt
SoulLib/Tests/UT/AST/Visitors/: CopyTest.cpp  DesugarTest.cpp  ErrorCollectorTest.cpp  LowerTest.cpp  SemanticAnalyzerTest.cpp  TypeDiscovererTest.cpp  TypeResolverTest.cpp
SoulLib/Tests/UT/AST/visitors/: copy_test.cpp  desugar_test.cpp  error_collector_test.cpp  lower_test.cpp  semantic_analyzer_test.cpp  type_discoverer_test.cpp  type_resolver_test.cpp
SoulLib/Tests/UT/Lexer/: LexerTest.cpp
SoulLib/Tests/UT/Parser/: ParserTest.cpp
SoulLib/Tests/UT/Parser/Cases/block/: block_require_semicolons_after_statements.json  block_require_semicolons_after_statements_nested.json  block_require_semicolons_after_statements_nested.soul  block_stray_semicolons.soul
SoulLib/Tests/UT/Parser/Cases/expressions/binary/: binary_expression_add_assignment.json  binary_expression_assignment.json  binary_expression_mul_assignment.json
SoulLib/Tests/UT/Parser/Cases/expressions/unary/: unary_expression_logical_not.json  unary_expression_minus.json  unary_expression_minus.soul  unary_expression_pre_decrement.json
SoulLib/Tests/UT/Parser/Cases/functions/call/: function_call_as_parameter_of_another.json  function_call_with_parameters.json
SoulLib/Tests/UT/Parser/Cases/functions/declaration/: function_declaration_with_parameters.json
SoulLib/Tests/UT/Parser/Cases/if/: if_with_else_block.json  if_without_else_block.json
SoulLib/Tests/UT/Parser/Cases/variables/: variable_declaration_with_cast_expression.json  variable_declaration_with_complex_type.soul  variable_declaration_with_sized_array_type.json  variable_declaration_with_sized_array_type.soul
compiler/: CMakeLists.txt
compiler/src/: main.cpp
examples/: test.soul
lib/: CMakeLists.txt
lib/Sources/: Soul.h
lib/Sources/AST/: AST.cpp  AST.h
lib/Sources/AST/Visitors/: Compare.cpp  Compare.h  Copy.cpp  DefaultTraverse.cpp  Desugar.cpp  Desugar.h  ErrorCollector.cpp  ErrorCollector.h  Lower.cpp  Lower.h  SemanticAnalyzer.h  Stringify.cpp  Stringify.h  TypeResolver.cpp  TypeResolver.inl  visitor.h
lib/Sources/Common/: SourceOffset.h  Value.cpp  Value.h
lib/Sources/IR/: BasicBlock.h  IRBuilder.h  IRBuilder.inl  Instruction.h  InstructionFwd.h
lib/Sources/IR/visitors/: Print.cpp  Print.h
lib/Sources/Lexer/: Codepoint.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h
lib/Sources/Parser/: Parser.cpp  Parser.h
lib/Sources/Types/: Type.h  TypeOverloads.cpp  TypeOverloads.h
lib/src/Lexer/: Lexer.cpp  Token.cpp
lib/src/ast/: ast.cpp  ast.h
lib/src/ast/visitors/: compare.cpp  copy.cpp  copy.h  lower.h  semantic_analyzer.cpp  stringify.cpp  stringify.h  type_discoverer.cpp  type_discoverer.h  type_resolver.cpp  type_resolver.h  type_resolver.inl
lib/src/common/: source_location.h  value.h  value.inl
lib/src/common/types/: type.cpp  type.h
lib/src/core/: types.h
lib/src/ir/: instruction.h  ir.h
lib/src/lexer/: Codepoint.h  Lexer.cpp  Lexer.h  Token.cpp  lexer.cpp  lexer.h  token.cpp  token.h
lib/src/parser/: parser.cpp  parser.h  type_specifier.cpp  type_specifier.h
lib/src/types/: overloads.cpp  type.h  types_fwd.h
lib/test/ut/: CMakeLists.txt
lib/test/ut/ast/visitors/: copy_test.cpp  desugar_test.cpp  error_collector_test.cpp  lower_test.cpp  semantic_analyzer_test.cpp  type_discoverer_test.cpp  type_resolver_test.cpp
lib/test/ut/lexer/: LexerTest.cpp  lexer_test.cpp
lib/test/ut/parser/: ParserTest.cpp  parser_test.cpp
lib/test/ut/parser/cases/block/: block_missing_closing_brace_with_statements.json  block_require_semicolons_after_statements.json  block_require_semicolons_after_statements.soul
lib/test/ut/parser/cases/expressions/binary/: binary_expression_sub_assignment.json  binary_expression_with_parentheses.json
lib/test/ut/parser/cases/expressions/mixed/: mixed_binary_minus_with_unary_minus.json  mixed_binary_minus_with_unary_minus.soul
lib/test/ut/parser/cases/expressions/unary/: unary_expression_pre_increment.json
lib/test/ut/parser/cases/functions/call/: function_call_as_expression.json
lib/test/ut/parser/cases/if/: if_with_else_block.json
lib/test/ut/parser/cases/structs/: struct_extraneous_comma_in_parameters.json  struct_with_parameters.json
lib/test/ut/parser/cases/variables/: variable_declaration_with_array_type.json  variable_declaration_with_array_type.soul  variable_declaration_with_cast_expression.json  variable_declaration_with_complex_type.json  variable_declaration_with_mutability.json  variable_declaration_with_pointer_type.json  variable_declaration_with_pointer_type.soul  variable_declaration_without_mutability.json
playground/: CMakeLists.txt  main.c  test.soul
(+124 files in other folders)
